
wxWindows 2.0 for Windows Change Log
------------------------------------

Alpha 15, August 31st 1998
--------------------------

- wxBitmap debugged.
- wxDC::GetDepth added.
- Contribution added whereby wxBitmap will be
  converted to DC depth if they don't match.
- wxConfig API improved, documentation updated.
- Printing classes name conventions cleaned up.
- wxUpdateUIEvent now derives from wxCommandEvent
  so event can travel up the window hierachy.

Alpha 14, July 31st 1998
------------------------

- Toolbar API has been simplified, and now
  wxFrame::GetClientArea returns the available client
  area when toolbar, status bar etc. have been accounted for.
  wxFrame::CreateToolBar added in line with CreateStatusBar.
- Documentation updates, incl. for wxToolBar.
- New wxAcceleratorTable class plus wxFrame::SetAcceleratorTable.
- Various additions from other folk, e.g. streams, wxConfig
  changes, wxNotebook.
- Added wxDocMDIParentFrame, wxDocMDIChildFrame for doc/view.

Alpha 13, July 8th 1998
-----------------------

- Implemented wxPoint as identical to POINT on Windows, and
  altered wxDC wxPoint functions to use wxPoint directly in
  Windows functions, for efficiency.
- Cured wxASSERT bug in wxStatusBar95.
- #ifdefed out some bits in oleutils.cpp for compilers that
  don't support it.
- Added some operators to wxPoint, wxSize.
- Added inline wxDC functions using wxPoint, wxSize, wxRect.

Alpha 12, July 7th 1998
-----------------------

- Added wxApp::GetComCtl32Version, and wxTB_FLAT style, so can
  have flat toolbars on Win98 or Win95 with IE >= 3 installed.

Alpha 11, July 3rd 1998
-----------------------

- Added thread.h, thread.cpp.
- Changed Enabled, Checked to IsEnabled, IsChecked in wxMenu,
  wxMenuBar.
- Changed wxMenuItem::SetBackColor to SetBackgroundColour,
  SetTextColor to SetTextColour, and added or made public several
  wxMenuItem accessors.
- Added two overloads to wxRegion::Contains. Added